# TFmlops

./: .gitignore  db.sqlite  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
tfmlops/: breastcancer.py
