[tool.poetry]
name = "tfmlops"
version = "0.1.0"
description = ""
authors = ["CristianTacoronteRivero <cristiantr.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
pylint = "^2.15.8"
pre-commit = "^2.20.0"
sphinx-autoapi = "^2.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
